	- Shield efficiency reduced from 0.9 to 1.0
	- Reduced flux dissipation from 1100 to 900
	- Increased base value from 750.000 to 900.000
	- Reduced flux capacity from 18000 to 16000
	- PPT reduced from 720s to 600s
	- Lowered DP from 70 to 60
- Nachtgesang
	- Lowered DP from 50 to 45
- Nessie
	- Increased armor from 1000 to 1100
- R-Type Phase Skimmer
	- Added a 5% flux cost to use
- Blocked a bunch of stuff from being available from that bloody dealer
- Reduced Legio Tyranny's buff to fleet size and spawn rate cause people are too weak
- Adjusted HVB level requirements for better compatibility with MagicBounts
	- Will receive a proper conversion to the MagicBounty system at a later date


0.7.6
- Added Tower-class Heavy Cruiser
- Reduced fadeout time for Ryza and Mezoa since someone was bitching about it
- Fixed Nessie large mount being a turret
- Fixed Bento (LP) tech type
- Fixed spawning for Blockhead (LP)
- Eagle (P)
	- Increased dissipation to 500


0.7.5c
- Fixed the Taffeta for good this time
- I swear to god if this crashes again...
- @SirHartley: I am the new crash fairy!


0.7.5b
- Fixed the Taffeta fix
- Flagellator
	- Hitpoints increased from 4000 to 6000
	- Reinfoced Bulkheads replaced with Rugged Construction
	

0.7.5
- Quick fix for 0.95.1a
- Castella
	- Now has standard Damper Field
- Blockhead
	- Now has standard Damper Field
- Wanna guess what Alex broke?
- Exactly, custom damper fields using vanilla AI
- Guess Castella and Blockhead are getting some buffs then


0.7.4
- Flagellator
	- Insulated Engine Assembly has been replaced with Reinforced Bulkheads
	- Reinforced Bulkheads added to Legio variant
	- Hitpoints reduced from 4500 to 4000
- Nelson
	- DP increased from 28 to 30
	- Re-re-re-re-re-re-reworked the sprite (help)
- Kupferflug Regalia
	- Fixed weapon groups so beam and torpedo can fire independently
- Hekaton
	- Halved energy damage component of emp arcs from 200 to 100
- Some fixes


0.7.3