@@ -66,12 +66,12 @@ Fragmenta,tahlan_Fragmenta,Drone,Unknown,,,150,50,100,,10,,,500,500,500,100,200,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Kassadari,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Dominator (GH),tahlan_dominator_gh,Heavy Cruiser,The Great Houses,tahlan_cavalrycharge,15,11000,1500,10000,,600,190,,40,20,10,12,12,2250,FRONT,,150,0.5,1,,,200,300,150,150,5,30,8,400000,4,12,540,0.25,27,27,HIDE_IN_CODEX,"tahlan_knights, rare_bp, hist3t",0.05,0.8,2,3,404
+Dominator (GH),tahlan_dominator_gh,Heavy Cruiser,The Great Houses,tahlan_cavalrycharge,15,14000,1500,10000,,600,190,,40,20,10,12,12,2250,FRONT,,150,0.5,1,,,200,300,150,150,5,30,8,400000,4,12,540,0.25,27,27,HIDE_IN_CODEX,"tahlan_knights, rare_bp, hist3t",0.05,0.8,2,3,404
 Enforcer (GH),tahlan_enforcer_gh,Destroyer,The Great Houses,tahlan_errantdrive,10,6000,900,4000,,200,110,,60,40,20,30,20,500,OMNI,,150,0.4,1,,,60,100,90,90,3,30,9,120000,5,12,420,0.25,10,10,HIDE_IN_CODEX,"tahlan_knights, rare_bp, hist3t",0.05,0.8,2,3,303
 Onslaught (GH),tahlan_onslaught_gh,Battleship,The Great Houses,tahlan_cavalrycharge,28,20000,1750,17000,,600,360,,25,10,10,4,4,3500,FRONT,,180,0.4,1,,,750,1500,300,400,15,27,7,1000000,3,12,720,0.25,44,44,HIDE_IN_CODEX,"tahlan_knights, rare_bp, hist3t",0.05,0.8,2,4,500
 Monitor (GH),tahlan_monitor_gh,Frigate,The Great Houses,tahlan_strongholdshield,5,1500,175,4000,,150,30,,90,120,100,60,120,200,OMNI,,360,0.5,0.8,,,15,30,30,20,1,20,10,50000,8,10,360,0.25,6,6,HIDE_IN_CODEX,"tahlan_knights, rare_bp, hist3t",0.05,0.8,2,2,214
 Vendetta (GH),tahlan_vendetta_gh,Battleship,The Great Houses,tahlan_stormdrive,30,18000,1500,15000,,800,280,,45,18,15,8,5,3500,OMNI,,120,0.4,1,,,500,1200,300,300,15,20,7,900000,3,12,720,0.25,46,46,HIDE_IN_CODEX,"tahlan_knights, rare_bp, hist3t",0.05,0.8,2,4,224422
-Legion (GH),tahlan_legion_gh,Battlecarrier,The Great Houses,tahlan_stormdrive,28,15000,1650,12000,,700,260,4,30,15,15,6,6,3500,FRONT,,180,0.4,1,,,700,1500,300,300,15,20,7,900000,3,12,720,0.25,44,44,"CARRIER, COMBAT, HIDE_IN_CODEX, NO_AUTO_ESCORT","tahlan_knights, rare_bp, hist3t",0.05,0.8,2,4,507
+Legion (GH),tahlan_legion_gh,Battlecarrier,The Great Houses,tahlan_stormdrive,28,18000,1650,12000,,700,260,4,30,15,15,6,6,3500,FRONT,,180,0.4,1,,,700,1500,300,300,15,20,7,900000,3,12,720,0.25,44,44,"CARRIER, COMBAT, HIDE_IN_CODEX, NO_AUTO_ESCORT","tahlan_knights, rare_bp, hist3t",0.05,0.8,2,4,507
 Scoralis,tahlan_Scoralis,Heavy Bomber,The Great Houses,flarelauncher,,600,50,400,,100,0,,120,300,200,80,180,10,NONE,,360,0,1,,,5,5,,,,,,,,,,,,,HIDE_IN_CODEX,,,0,,,112112
 Valacor,tahlan_Valacor,Hunter,The Great Houses,flarelauncher_fighter,,300,100,500,,100,,,220,150,120,80,160,30,OMNI,,360,0,1,,,3,3,,,,,,,,,,,,,HIDE_IN_CODEX,,,0,,,454
 Acastus,tahlan_Acastus,Fighter,The Great Houses,,,200,50,300,,50,,,300,200,180,80,160,30,OMNI,,180,0,1,,,2,2,,,,,,,,,,,,,HIDE_IN_CODEX,,,0,,,454
@@ -92,7 +92,7 @@ Bento (RG),tahlan_Bento_rg,Gunship,Red Guards,ammofeed,8,3000,800,8000,,150,80,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Legio Infernalis,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Doominator,tahlan_Dominator_PH,Phase Cruiser,Legio Infernalis,tahlan_weaponsoverdrive,15,11000,1400,12000,,500,150,,40,20,10,12,12,2000,PHASE,tahlan_heavyphase,,,1,0.05,0.1,200,300,150,150,5,30,8,250000,4,12,540,0.25,25,25,PHASE,"rare_bp, tahlan_legio, hist2t",0.2,0.4,2,3,404
+Doominator,tahlan_Dominator_PH,Phase Cruiser,Legio Infernalis,tahlan_weaponsoverdrive,15,14000,1500,12000,,500,150,,40,20,10,12,12,2000,PHASE,tahlan_heavyphase,,,1,0.05,0.1,200,300,150,150,5,30,8,250000,4,12,540,0.25,25,25,PHASE,"rare_bp, tahlan_legio, hist2t",0.2,0.4,2,3,404
 Flagellator (LI),tahlan_Flagellator_pi,Destroyer,Legio Infernalis,tahlan_crusherdrive,10,6000,800,4000,,300,100,,90,100,60,40,40,450,FRONT,,90,0.4,1,,,50,90,70,70,3,28,9,35000,5,12,420,0.25,9,9,,"tahlan_legio_bp, tahlan_legio",,0.4,2,3,13464
 Bronco (LI),tahlan_Bronco_p,Destroyer,Legio Infernalis,ammofeed,10,4000,600,3500,,200,80,,70,50,20,30,20,500,OMNI,,120,0.4,1.1,,,50,90,120,80,3,28,9,35000,5,12,420,0.25,10,10,,"tahlan_legio_bp, tahlan_legio",,0.5,2,3,1134
 Lasher (LI),tahlan_lasher_pi,Frigate,Legio Infernalis,ammofeed,5,1750,250,2100,,140,50,,130,110,90,60,90,200,FRONT,,210,0.4,1,,,25,50,40,25,1,25,10,9000,8,10,240,0.25,4,4,,"tahlan_legio_bp, tahlan_legio",,0.4,2,2,204
