@@ -2,6 +2,7 @@ package data.scripts.shipsystems;
 
 import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.combat.MutableShipStatsAPI;
+import com.fs.starfarer.api.combat.PhaseCloakSystemAPI;
 import com.fs.starfarer.api.combat.ShipAPI;
 import com.fs.starfarer.api.combat.ShipSystemAPI;
 import com.fs.starfarer.api.impl.campaign.ids.Stats;
@@ -17,6 +18,9 @@ public class tahlan_HeavyPhaseStats extends BaseShipSystemScript {
 
     public static final float MAX_TIME_MULT = 3f;
 
+    public static boolean FLUX_LEVEL_AFFECTS_SPEED = true;
+    public static float MIN_SPEED_MULT = 0.33f;
+    public static float BASE_FLUX_LEVEL_FOR_MIN_SPEED = 0.5f;
 
     protected Object STATUSKEY1 = new Object();
     protected Object STATUSKEY2 = new Object();
@@ -28,24 +32,61 @@ public class tahlan_HeavyPhaseStats extends BaseShipSystemScript {
         return 1f + (MAX_TIME_MULT - 1f) * stats.getDynamic().getValue(Stats.PHASE_TIME_BONUS_MULT);
     }
 
+
+    protected float getDisruptionLevel(ShipAPI ship) {
+        //return disruptionLevel;
+        //if (true) return 0f;
+        if (FLUX_LEVEL_AFFECTS_SPEED) {
+            float threshold = ship.getMutableStats().getDynamic().getMod(
+                    Stats.PHASE_CLOAK_FLUX_LEVEL_FOR_MIN_SPEED_MOD).computeEffective(BASE_FLUX_LEVEL_FOR_MIN_SPEED);
+            if (threshold <= 0) return 1f;
+            float level = ship.getHardFluxLevel() / threshold;
+            if (level > 1f) level = 1f;
+            return level;
+        }
+        return 0f;
+    }
+
     protected void maintainStatus(ShipAPI playerShip, State state, float effectLevel) {
-        float level = effectLevel;
         float f = VULNERABLE_FRACTION;
 
         ShipSystemAPI cloak = playerShip.getPhaseCloak();
         if (cloak == null) cloak = playerShip.getSystem();
         if (cloak == null) return;
 
-        if (level > f) {
+        if (effectLevel > f) {
             Global.getCombatEngine().maintainStatusForPlayerShip(STATUSKEY2,
                     cloak.getSpecAPI().getIconSpriteName(), cloak.getDisplayName(), "time flow altered", false);
         }
+
+        if (FLUX_LEVEL_AFFECTS_SPEED) {
+            if (effectLevel > f) {
+                if (getDisruptionLevel(playerShip) <= 0f) {
+                    Global.getCombatEngine().maintainStatusForPlayerShip(STATUSKEY3,
+                            cloak.getSpecAPI().getIconSpriteName(), "phase coils stable", "top speed at 100%", false);
+                } else {
+                    //String disruptPercent = "" + (int)Math.round((1f - disruptionLevel) * 100f) + "%";
+                    //String speedMultStr = Strings.X + Misc.getRoundedValue(getSpeedMult());
+                    String speedPercentStr = Math.round(getSpeedMult(playerShip, effectLevel) * 100f) + "%";
+                    Global.getCombatEngine().maintainStatusForPlayerShip(STATUSKEY3,
+                            cloak.getSpecAPI().getIconSpriteName(),
+                            //"phase coils at " + disruptPercent,
+                            "phase coil stress",
+                            "top speed at " + speedPercentStr, true);
+                }
+            }
+        }
+    }
+
+    public float getSpeedMult(ShipAPI ship, float effectLevel) {
+        if (getDisruptionLevel(ship) <= 0f) return 1f;
+        return MIN_SPEED_MULT + (1f - MIN_SPEED_MULT) * (1f - getDisruptionLevel(ship) * effectLevel);
     }
 
 
     public void apply(MutableShipStatsAPI stats, String id, State state, float effectLevel) {
-        ShipAPI ship = null;
-        boolean player = false;
+        ShipAPI ship;
+        boolean player;
         if (stats.getEntity() instanceof ShipAPI) {
             ship = (ShipAPI) stats.getEntity();
             player = ship == Global.getCombatEngine().getPlayerShip();
@@ -62,33 +103,41 @@ public class tahlan_HeavyPhaseStats extends BaseShipSystemScript {
             return;
         }
 
+        ShipSystemAPI cloak = ship.getPhaseCloak();
+        if (cloak == null) cloak = ship.getSystem();
+        if (cloak == null) return;
+
+        if (FLUX_LEVEL_AFFECTS_SPEED) {
+            if (state == State.ACTIVE || state == State.OUT || state == State.IN) {
+                float mult = getSpeedMult(ship, effectLevel);
+                if (mult < 1f) {
+                    stats.getMaxSpeed().modifyMult(id + "_2", mult);
+                } else {
+                    stats.getMaxSpeed().unmodifyMult(id + "_2");
+                }
+                ((PhaseCloakSystemAPI)cloak).setMinCoilJitterLevel(getDisruptionLevel(ship));
+            }
+        }
+
         if (state == State.COOLDOWN || state == State.IDLE) {
             unapply(stats, id);
             return;
         }
 
-        float level = effectLevel;
         //float f = VULNERABLE_FRACTION;
 
 
         float jitterLevel = 0f;
         float jitterRangeBonus = 0f;
-        float levelForAlpha = level;
-
-        ShipSystemAPI cloak = ship.getPhaseCloak();
-        if (cloak == null) cloak = ship.getSystem();
+        float levelForAlpha = effectLevel;
 
 
         if (state == State.IN || state == State.ACTIVE) {
             ship.setPhased(true);
-            levelForAlpha = level;
+            levelForAlpha = effectLevel;
         } else if (state == State.OUT) {
-            if (level > 0.5f) {
-                ship.setPhased(true);
-            } else {
-                ship.setPhased(false);
-            }
-            levelForAlpha = level;
+            ship.setPhased(effectLevel > 0.5f);
+            levelForAlpha = effectLevel;
         }
 
 
@@ -106,7 +155,7 @@ public class tahlan_HeavyPhaseStats extends BaseShipSystemScript {
         }
 
         float speedPercentMod = stats.getDynamic().getMod(Stats.PHASE_CLOAK_SPEED_MOD).computeEffective(0f);
-        stats.getMaxSpeed().modifyPercent(id, speedPercentMod * effectLevel);
+        stats.getMaxSpeed().modifyPercent(id+"_skillmod", speedPercentMod * effectLevel);
 
         if (state == State.OUT) {
             stats.getMaxSpeed().unmodify(id); // to slow down ship to its regular top speed while powering drive down
@@ -124,7 +173,7 @@ public class tahlan_HeavyPhaseStats extends BaseShipSystemScript {
 
     public void unapply(MutableShipStatsAPI stats, String id) {
 
-        ShipAPI ship = null;
+        ShipAPI ship;
 
         if (stats.getEntity() instanceof ShipAPI) {
             ship = (ShipAPI) stats.getEntity();
@@ -139,6 +188,8 @@ public class tahlan_HeavyPhaseStats extends BaseShipSystemScript {
         ship.setExtraAlphaMult(1f);
 
         stats.getMaxSpeed().unmodify(id);
+        stats.getMaxSpeed().unmodify(id+"_skillmod");
+        stats.getMaxSpeed().unmodifyMult(id + "_2");
         stats.getMaxTurnRate().unmodify(id);
         stats.getTurnAcceleration().unmodify(id);
         stats.getAcceleration().unmodify(id);
